--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 	<script src="./JavaScript/Jquery.js"></script>
 	<script src="./JavaScript/humburger-menu.js" ></script>
 	<!-- Je traite mon formulaire ici avec le Jquery, il traite le formulaire  -->
-	<script type="text/javascript" src="acceuil.js" ></script>
+	<script type="text/javascript" src="./JavaScript/acceuil.js" ></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
